<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    android:paddingHorizontal="20dp"
    android:background="@drawable/gradient"
    android:layout_gravity="center"
    tools:context=".AboutMe">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aboutme"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-26dp"
                tools:layout_editor_absoluteY="35dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="190dp"
                android:layout_height="133dp"
                app:srcCompat="@drawable/photo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noklent"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kelas"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>